# musherpiARnoApp

./: .gitignore  Application.mk  GPT_rivmusica_2025-07-29.md  Patent.md  Project_Communication_Log.txt  VrApp.gradle  build.gradle  gradle.properties  settings.gradle
SampleCommon/Projects/Android/jni/: Application.mk  CMakeLists.txt
SampleXrFramework/Projects/Android/jni/: CMakeLists.txt
app/: build.gradle  settings.gradle
app/gradle/wrapper/: gradle-wrapper.properties
app/jni/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Engine.cpp  Engine.h  GLES3Loader.cpp  GLES3Loader.h  Global.h  IntentParser.cpp  IntentParser.h  Object.h  Piarno.cpp  Piarno.h  VoiceInputManager.cpp  VoiceInputManager.h  XrPassthrough.h  XrPassthroughGl.cpp  XrPassthroughGl.h  XrPassthroughInput.h
app/src/main/cpp/midi/: Binasc.h  MidiEvent.h  MidiEventList.h  MidiFile.h  MidiMessage.h
app/src/main/cpp/models/: alphabet.h  alphanum.h  axes.h  cube.h  piARno.h  piano_wireframe.h  rect.h  shuttle.h  teapot.h
app/src/main/cpp/songs/: ac_2am.h  amelie.h  beethoven.h  canon.h  coffin_dance.h  dre.h  elise.h  entertainer.h  fairy_tail.h  game_of_thrones.h  gymnopedie.h  heartnsoul1.h  heartnsoul2.h  hittheroad.h  hp.h  imagine.h  jacque.h  let_her_go.h  minuet.h  name_of_love.h  ode.h  over_the_rainbow.h  paradise.h  pirate.h  river_flows.h  spring.h  supermario.h  sweden1.h  sweden2.h  take_on_me.h  twinkle.h  wet_hands.h  winner_takes_it_all.h  winter.h
gradle/wrapper/: gradle-wrapper.properties
